manifests/daemonsets.yml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: fluent-bit
  namespace: nodeapp

spec:
  selector:
    matchLabels:
      app: fluent-bit

  template:

    metadata:
      labels:
        app: fluent-bit

    spec:

      tolerations:
      - key: "environment"
        operator: "Equal"
        value: "production"
        effect: "NoSchedule"

      containers:
      - name: fluent-bit

        image: fluent/fluent-bit:latest

        volumeMounts:

        - name: varlog
          mountPath: /var/log

        - name: containers
          mountPath: /var/lib/docker/containers
          readOnly: true

        # 👇 Mount Fluent Bit ConfigMap here
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc/

      volumes:

      - name: varlog
        hostPath:
          path: /var/log

      - name: containers
        hostPath:
          path: /var/lib/docker/containers

      # 👇 Add ConfigMap volume
      - name: fluent-bit-config
        configMap:
          name: fluent-bit-config
