manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nodeapp-deployment
  namespace: nodeapp

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nodeapp

  template:
    metadata:
      labels:
        app: nodeapp

    spec:

      tolerations:
      - key: "environment"
        operator: "Equal"
        value: "production"
        effect: "NoSchedule"

      containers:

      - name: biorythmic-app-container
        image: saimwaxonit/biorythm-app:1.3

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: 100m
            memory: 200Mi

          limits:
            cpu: 500m
            memory: 500Mi

        livenessProbe:
          httpGet:
            path: /
            port: 5000

          initialDelaySeconds: 15
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 5000

          initialDelaySeconds: 5
          periodSeconds: 5

        volumeMounts:
        - name: app-logs
          mountPath: /var/log/app

      - name: log-sidecar
        image: busybox

        command:
        - sh
        - -c
        - |
          echo "Log sidecar started"
          touch /var/log/app/app.log
          tail -f /var/log/app/app.log

        volumeMounts:
        - name: app-logs
          mountPath: /var/log/app

      volumes:
      - name: app-logs
        emptyDir: {}
