manifests/service.yml
kind: Service
apiVersion: v1
metadata:
  name: nodeapp-service
  namespace: nodeapp
spec:
  selector:
    app: nodeapp
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
